--- a/modules/lab3d/app/ui/MainWindow.ui
+++ b/modules/lab3d/app/ui/MainWindow.ui
@@ -53,6 +53,7 @@
    </attribute>
    <addaction name="action_AddModel"/>
    <addaction name="actionAbout"/>
+   <addaction name="separator"/>
   </widget>
   <action name="action_AddModel">
    <property name="icon">
