--- a/modules/lab3d/ui/MainWindow.ui
+++ b/modules/lab3d/ui/MainWindow.ui
@@ -28,6 +28,9 @@
      <string>File</string>
     </property>
     <addaction name="action_AddModel"/>
+    <addaction name="action_OpenProject"/>
+    <addaction name="action_SaveProject"/>
+    <addaction name="action_SaveProjectAs"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
@@ -52,6 +55,7 @@
     <bool>false</bool>
    </attribute>
    <addaction name="action_AddModel"/>
+   <addaction name="action_OpenProject"/>
    <addaction name="actionAbout"/>
    <addaction name="separator"/>
   </widget>
@@ -63,10 +67,16 @@
    <property name="text">
     <string>Add Model...</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
   </action>
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
   <action name="actionAbout">
@@ -76,6 +86,42 @@
    </property>
    <property name="text">
     <string>About...</string>
+   </property>
+  </action>
+  <action name="action_OpenProject">
+   <property name="icon">
+    <iconset>
+     <normaloff>resources/open.png</normaloff>resources/open.png</iconset>
+   </property>
+   <property name="text">
+    <string>Open Project...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="action_SaveProject">
+   <property name="icon">
+    <iconset>
+     <normaloff>resources/save.png</normaloff>resources/save.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save Project</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="action_SaveProjectAs">
+   <property name="icon">
+    <iconset>
+     <normaloff>resources/save.png</normaloff>resources/save.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save Project As...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
    </property>
   </action>
  </widget>
