--- a/modules/lab3d/ui/MainWindow.ui
+++ b/modules/lab3d/ui/MainWindow.ui
@@ -56,8 +56,10 @@
    </attribute>
    <addaction name="action_AddModel"/>
    <addaction name="action_OpenProject"/>
-   <addaction name="actionAbout"/>
+   <addaction name="action_SaveProject"/>
    <addaction name="separator"/>
+   <addaction name="separator"/>
+   <addaction name="actionAbout"/>
   </widget>
   <action name="action_AddModel">
    <property name="icon">
