--- a/modules/lab3d/ui/MainWindow.ui
+++ b/modules/lab3d/ui/MainWindow.ui
@@ -58,8 +58,18 @@
    <addaction name="action_OpenProject"/>
    <addaction name="action_SaveProject"/>
    <addaction name="separator"/>
-   <addaction name="separator"/>
    <addaction name="actionAbout"/>
+  </widget>
+  <widget class="QToolBar" name="manipulatorToolbar">
+   <property name="windowTitle">
+    <string>toolBar_2</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
   </widget>
   <action name="action_AddModel">
    <property name="icon">
