--- a/modules/lab3d/ui/MainWindow.ui
+++ b/modules/lab3d/ui/MainWindow.ui
@@ -55,6 +55,7 @@
     <bool>false</bool>
    </attribute>
    <addaction name="action_AddModel"/>
+   <addaction name="actionExcludeSelected"/>
    <addaction name="action_OpenProject"/>
    <addaction name="action_SaveProject"/>
    <addaction name="separator"/>
@@ -134,6 +135,18 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+S</string>
+   </property>
+  </action>
+  <action name="actionExcludeSelected">
+   <property name="icon">
+    <iconset>
+     <normaloff>resources/exclude.png</normaloff>resources/exclude.png</iconset>
+   </property>
+   <property name="text">
+    <string>Exclude Selected Entity</string>
+   </property>
+   <property name="toolTip">
+    <string>Exclude Selected Entity</string>
    </property>
   </action>
  </widget>
