--- a/modules/lab3d/ui/MainWindow.ui
+++ b/modules/lab3d/ui/MainWindow.ui
@@ -46,7 +46,7 @@
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>Command ToolBar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -63,7 +63,7 @@
   </widget>
   <widget class="QToolBar" name="manipulatorToolbar">
    <property name="windowTitle">
-    <string>toolBar_2</string>
+    <string>Manipulators ToolBar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
